--- a/io.github.opennumismat.OpenNumismat.yml
+++ b/io.github.opennumismat.OpenNumismat.yml
@@ -108,7 +108,7 @@ modules:
       - install -Dm644 open-numismat.png /app/share/icons/hicolor/48x48/apps/${FLATPAK_ID}.png
       - install -Dm644 io.github.opennumismat.OpenNumismat.metainfo.xml /app/share/metainfo/${FLATPAK_ID}.metainfo.xml
       - desktop-file-edit --set-key=Exec --set-value=/app/bin/open-numismat /app/share/applications/${FLATPAK_ID}.desktop
-      - desktop-file-edit --set-key=Icon --set-value=${FLATPAK_ID} /app/share/applications/${FLATPAK_ID}.desktop
+      - desktop-file-edit --set-icon=${FLATPAK_ID} /app/share/applications/${FLATPAK_ID}.desktop
     sources:
       - type: git
         url: https://github.com/OpenNumismat/open-numismat.git
